--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,18 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #1f1f1f">
+  <body
+    style="
+      background-image: linear-gradient(
+        to right,
+        #051937,
+        #10235b,
+        #31297c,
+        #5d2799,
+        #8f0faf
+      );
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
