--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,18 @@
   <body
     style="
       background-image: linear-gradient(
-        to right,
-        #051937,
+        to right top,
+        #8f0faf,
+        #69249f,
+        #46298c,
+        #282874,
         #10235b,
-        #31297c,
-        #5d2799,
+        #10235b,
+        #10235b,
+        #10235b,
+        #282874,
+        #46298c,
+        #69249f,
         #8f0faf
       );
     "
